--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>FbApp</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <title>FbApp</title>
   </head>
 
   <body>
-    <% flash.each do |key, value| %>
-      <%= content_tag(:div, value, class: "#{key}") %>
-    <% end %>
+    <!-- navber -->
+    <nav class="navbar navbar-expand-lg bg-primary py-3">
+    <div class="container">
+    <a class="navbar-brand" href="#">
+      <h2 class="pt-1">友達つながりアプリ</h2>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+        </li>
+        <li class="nav-item">
+          <% if logged_in? %>
+          <%= button_to '一覧画面', pictures_path, method: :get %>
+          <%= button_to "プロフィール", user_path(current_user.id), method: :get %>
+          <%= button_to "ログアウト", session_path(current_user.id), method: :delete %>
+          <% else %>
+          <%= button_to "サインアップ", new_user_path, method: :get %>
+          <%= button_to "ログイン", new_session_path, method: :get %>
+          <% end %>
+        </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <% if logged_in? %>
-    <%= link_to "Profile", user_path(current_user.id) %>
-    <%= link_to "Logout", session_path(current_user.id), method: :delete %>
-    <% else %>
-    <%= link_to "Sign up", new_user_path %>
-    <%= link_to "Login", new_session_path %>
-    <% end %>
+  <div class="text-bg-secondary p-3">
+  <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+  <% end %>
 
-    <%= yield %>
+  <% if logged_in? %>
+  <%= button_to "プロフィール", user_path(current_user.id), method: :get %>
+  <%= button_to "ログアウト", session_path(current_user.id), method: :delete %>
+  <% else %>
+  <%= button_to "サインアップ", new_user_path, method: :get %>
+  <%= button_to "ログイン", new_session_path, method: :get %>
+  <% end %>
+
+    <div class="hero vh-100 d-flex align-items-center">
+      <div class="container">
+          <div class="col-lg-7 mx-auto text-center">
+            <%= yield %>
+          </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer-->
+        <footer class="border-top bg-primary">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <ul class="list-inline text-center">
+                            <li class="list-inline-item">
+                            </li>
+                        </ul>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; 2022 DIC.WEF_2205</div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
