--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editing Picture</h1>
 
+<h2>投稿編集</h2>
 <%= render 'form', picture: @picture %>
 
-<%= link_to 'Show', @picture %> |
-<%= link_to 'Back', pictures_path %>
+<%= button_to '詳細', @picture, method: :get %> |
+<%= button_to '一覧画面', pictures_path, method: :get %>
