--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', picture: @picture %>
 
-<%= link_to 'Back', pictures_path %>
+<%= button_to '一覧画面', pictures_path, method: :get %>
