contentとcssが反映するように改善

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,16 +13,13 @@
  *= require_tree .
  *= require_self
  */
- img.sized {
+
+ .field img {
   width: 80%;
   height: 80%;
 }
 
- .hero {
-   background-image: url(./img/summer.jpg);
-   background-position: center;
-   background-size: cover;
-   background-attachment: fixed;
-   /* position: relative; */
-   /* z-index: 2; */
- }
+img {
+ width: 80%;
+ height: 80%;
+}
