--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Image:</strong>
-  <%= image_tag @picture.image.url, width: '70%', height: '70%' %>
+  <%= image_tag @picture.image.url%>
 </p>
 
 <p>
