--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -1,8 +1,11 @@
 <h1>確認画面</h1>
 <%= form_with(model: @picture, url: pictures_path, local: true) do |form| %>
+
+  <%= form.hidden_field :content %>
+
+  <p>Content:<%= @picture.content %></p>
   <%= image_tag(@picture.image.url) if @picture.image && @picture.image.url %>
   <%= form.hidden_field :image_cache %>
-  <%= form.hidden_field :content %>
   <%= form.submit "投稿する" %>
 <% end %>
 
